# novel_writer_ai

./: .env.simple  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  文件结构.txt
alembic/: README.md
alembic/versions/: 4e61345a8f3d_initial_database_schema.py  891ae81e9873_增加章节内容字段.py  99901c51854f_项目增加风格字段.py  cb9f60967868_增加卷.py
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  associations.py  base.py  character.py  project.py  setting.py  structure.py
app/routers/: __init__.py  chapters.py  characters.py  generation.py  projects.py  relationships.py  scenes.py  settings.py  volumes.py
app/schemas/: __init__.py  chapter.py  character.py  project.py  relationship.py  scene.py  setting.py  volume.py
app/services/: __init__.py  chapter_service.py  character_service.py  llm_service.py  project_service.py  rag_service.py  relationship_service.py  scene_service.py  setting_service.py  volume_service.py
app/utils/: jsonUtils.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  axios.js  main.js
frontend/src/components/chapter/: ChapterForm.vue  ChapterItem.vue
frontend/src/router/: index.js
frontend/src/services/: apiClient.js  chapterAPI.js  characterAPI.js  generationAPI.js  projectAPI.js  relationshipAPI.js  sceneAPI.js  settingAPI.js  volumeAPI.js
frontend/src/store/: chapter.js  character.js  index.js  project.js  relationship.js  scene.js  setting.js  ui.js  volume.js
frontend/src/views/: NotFound.vue  ProjectDashboard.vue  ProjectWorkspace.vue
(+27 files in other folders)
